# interna-clinic-backend

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 319a292a8ad8_.py  5b0587f7b408_.py  8fb6629fc079_.py  9eb70d981ddd_.py  a39e62105085_.py  bb9a177ef151_initial_migration.py  eecd1a60e2d5_.py  f58a8ea1d1a5_.py
app/: dependencies.py  main.py
app/api/v1/auth/: auth.py  auth_router.py
app/api/v1/auth/jwt/: token.py  token_schema.py
app/api/v1/repositories/: admin_repository.py  doctor_repository.py  patient_repository.py
app/api/v1/routers/: admin_router.py  doctor_router.py  patient_router.py
app/api/v1/services/: admin_service.py  doctor_service.py  patient_service.py
app/api/v1/services/pagination/: pagination_service.py
app/config/: database.py  db_config.py  env_config.py
app/models/: models.py
app/schemas/: schemas.py
